# finance_tracker

./: .gitignore  COPYING  Cargo.toml  README.md  config.toml
.github/workflows/: release.yml
db/migrations/: 1_initialSql.sql
double_entry_bookkeeping/: Cargo.toml
double_entry_bookkeeping/db/migrations/: 1_initialSql.sql  2_insertInitialData.sql
double_entry_bookkeeping/src/: command.rs  lib.rs  migrations.rs  transaction.rs
double_entry_bookkeeping/src/dao/: account_dao.rs  journal_dao.rs  mod.rs
double_entry_bookkeeping/src/dao/sqlite/: account_sqlite_dao.rs  mod.rs
double_entry_bookkeeping/src/model/: account.rs  account_type.rs  journal.rs  ledger.rs  ledger_entry.rs  mod.rs  new_transaction.rs
double_entry_bookkeeping/src/model/account/: mod.rs  (+5 more)
double_entry_bookkeeping/src/service/: account_service.rs  journal_service.rs  ledger_service.rs  mod.rs
finance_cli/: Cargo.toml
finance_cli/src/: main.rs  tableds.rs
finance_cli/src/command/: client.rs  init.rs  invoice.rs  mod.rs
finance_cli/src/command_handler/: client.rs  init.rs  invoice.rs
finance_cli/src/commands/: client.rs  invoice.rs  mod.rs
finance_cli/src/util/: client_display.rs  invoice_display.rs  line_item_display.rs  mod.rs
finance_tracker/: Cargo.toml
finance_tracker/db/migrations/: 001_bookkeeping_initial.sql  003_bookkeeping_initial_data.sql  2_double_entry_bookkeeping_initialSql.sql  3_double_entry_bookkeeping_insertInitialData.sql
finance_tracker/src/: config_service.rs  configuration.rs  database.rs  main.rs  migrations.rs
finance_tracker/src/command/: account.rs  invoice.rs  journal.rs  mod.rs
finance_tracker/src/command_handler/: account.rs  client.rs  init.rs  invoice.rs  journal.rs  mod.rs
finance_tracker/src/sqlite_dao/: account_sqlite_dao.rs  client_sqlite_dao.rs  invoice_sqlite_dao.rs  journal_sqlite_dao.rs  mod.rs
finance_tracker/src/util/: account_display.rs  invoice_display.rs  line_item_display.rs  mod.rs
invoice_manager/: Cargo.toml
invoice_manager/db/migrations/: 1_initialSql.sql
invoice_manager/src/: lib.rs  migrations.rs  utils.rs
invoice_manager/src/dao/: client_dao.rs  invoice_dao.rs  mod.rs
invoice_manager/src/dao/sqlite/: client_sqlite_dao.rs  invoice_sqlite_dao.rs  mod.rs  sqlite_connection.rs
invoice_manager/src/model/: README.md  client.rs  config.rs  invoice.rs  invoice_search.rs  invoice_status.rs  line_item.rs  mod.rs  new_client.rs  new_config.rs  new_invoice.rs  new_line_item.rs
invoice_manager/src/model/client/: client.rs  mod.rs  new_client.rs
invoice_manager/src/model/configuration/: company_configuration.rs  database_configuration.rs  mod.rs  new_configuration.rs
invoice_manager/src/model/invoice/: invoice.rs  invoice_search.rs  invoice_status.rs  mod.rs  new_invoice.rs
invoice_manager/src/model/line_item/: line_item.rs  mod.rs  new_line_item.rs
invoice_manager/src/service/: client_service.rs  config_service.rs  invoice_service.rs  mod.rs  pdf_service.rs
invoice_manager/template/: invoice.tex
src/: lib.rs  line_item.rs  line_item_service.rs  main.rs  new_line_item.rs  tableds.rs  utils.rs
src/dao/: client_dao.rs  create_sqlite_tables.rs  crud.rs  error.rs  invoice_dao.rs  line_item_dao.rs  mod.rs  sqlite_connection.rs
src/dao/sqlite/: client_sqlite_dao.rs  create_sqlite_tables.rs  invoice_sqlite_dao.rs  line_item_sqlite_dao.rs  line_item_sqlite_dto.rs  mod.rs  sqlite_connection.rs  sqlite_x_connecton.rs
src/model/: README.md  client.rs  error.rs  invoice.rs  invoice_search.rs  invoice_status.rs  line_item.rs  mod.rs  new_client.rs  new_line_item.rs
src/service/: client_service.rs  invoice_service.rs  line_item_service.rs  mod.rs
utilities/: Cargo.toml
utilities/src/: dialog.rs  error.rs  lib.rs  utils.rs
(+5 files in other folders)
