[workspace]
members = [
    "double_entry_bookkeeping",
    "finance_tracker",
    "invoice_manager",
    "utilities"
]

[workspace.dependencies]
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "migrate", "macros" ] }
utilities = { path = "utilities" }