[package]
name = "finance_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
invoice_manager = {path = "../invoice_manager"}
clap = { version = "4.5.42", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
chrono = "0.4.41"
comfy-table = "7.2.0"
indicatif = "0.18.0"
dialoguer = "0.12.0"
