[package]
name = "finance_tracker"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
utilities = { workspace = true }
sqlx = { workspace = true }
invoice_manager = {path = "../invoice_manager"}
double_entry_bookkeeping = {path = "../double_entry_bookkeeping"}
tokio = { version = "1.47.1", features = ["full"] }
comfy-table = "7.2.0"
