[package]
name = "invoice_manager"
version = "0.1.0"
edition = "2024"

[features]
default = []
dev = []

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
utilities = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "migrate", "macros" ] }
num-format = "0.4.4"
directories = "6.0.0"
toml = "0.9.5"
